adding extra memory for release script